k8s/tracing/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tempostack
  labels:
    name: tempostack
    istio-discovery: enabled
