k8s/tracing/networkpolicies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-otel-to-gateway
  namespace: tempostack
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/instance: tempostack
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: otel-collector
    ports:
    - port: 8080
      protocol: TCP
    - port: 8090
      protocol: TCP
